<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/LinearLayout_modelfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_modelfit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:gravity="center"
            android:text="@string/modelfit_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
        	android:textColor="@color/white"
        	android:textSize="30sp"
        	android:textStyle="bold" />
		
		<TextView
            android:id="@+id/textView_modelfit_explain_part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelfit_explain_part1"
            android:textSize="20sp" />
		
		<ImageView
            android:id="@+id/imageView_modelfit_learningcurves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/message_alertdialog_ok"
            android:src="@drawable/learningcurves" />

        <TextView
            android:id="@+id/textView_modelfit_epigraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelfit_epigraph"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_modelfit_compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/message_alertdialog_ok"
            android:src="@drawable/fitdata_compare" />

        <TextView
            android:id="@+id/textView_modelfit_explain_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelfit_explain_part2"
            android:textSize="20sp" />
			
		<ImageView
		    android:id="@+id/imageView_modelfit_degree"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/message_alertdialog_ok"
		    android:src="@drawable/fitdata_degree" />
			
        <Button
            android:id="@+id/button_modelfit_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="45dp"
            android:layout_height="45dp"
			android:background="@drawable/icon_ok"
			android:stateListAnimator="@null"/>

    </LinearLayout>
    
</ScrollView>


