<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_presentation"
    tools:context=".PresentationActivity" >

    <TextView
        android:id="@+id/textView_presentation_nameApp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:alpha="0.6"
        android:gravity="center_horizontal"
        android:text="@string/presentation_appname"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout_optiming1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_presentation_intro"
        android:alpha="0.3"
        android:background="@color/white"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView_presentation_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_presentation_nameApp"
        android:alpha="0.5"
        android:background="@color/white"
        android:text="@string/presentation_intro"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@id/LinearLayout_presentation_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="360dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_presentation_flag_spanish"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/flag_spain"
            android:stateListAnimator="@null" />

        <Button
            android:id="@+id/button_presentation_flag_english"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/flag_england"
            android:stateListAnimator="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_presentation_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/LinearLayout_presentation_language"
        android:gravity="center_horizontal"
        android:text="@string/presentation_selectLang"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic" />

</RelativeLayout>